--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^7.0.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.3.1",
