--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.545.0",
     "next": "^16.0.7",
     "next-themes": "^0.4.6",
